--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -553,7 +553,7 @@ body > section > .holder > .title h2:after {
 	height: 500px;
 	border-radius: 20%;
 	/* background: url("http://i.imgur.com/ifckBKU.png"); */
-	background: url(/images/projets-img/2023\ 10\ JOUIHRI\ El\ Mehdi\ 07836_I.jpg);
+	background: url(/images/projets-img/mehdi.jpg);
 	background-position: -4585px;
 	margin: auto;
 	margin-top: 50px;
